--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
             <button class="copy-button" onclick="copyText('ⁱᵐ')">Copiar</button>
         </div>
         <div class="copy-group">
+            <span>⁰⁰ ✶ 𝗜𝗺𝗽𝗲𝗿𝗮𝗱𝗼𝗿 ꗃ </span>
+            <button class="copy-button" onclick="copyText('ⁱᵐ')">Copiar</button>
+        </div>
+        <div class="copy-group">
             <span> ⁰¹🥇Assistente ꗃ</span>
             <button class="copy-button" onclick="copyText('ᵃˢˢ')">Copiar</button>
         </div>
