--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <button class="copy-button" onclick="copyText('2024')">Copiar</button>
         </div>
         <div class="copy-group">
-            <span> Embaixador de Imperador</span>
+            <span> Embaixador de Ir</span>
             <button class="copy-button" onclick="copyText('2024')">Copiar</button>
         </div>
         <div class="copy-group">
