--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
             <h2> Capitólio <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
         </div>
         <div class="copy-group">
-            <span>⁰⁰ ✶ Dirigente ꗃ </span>
+            <span>⁰⁰ ✶ Em branco ꗃ </span>
             <button class="copy-button" onclick="copyText('ⁱᵐ')">Copiar</button>
         </div>
         <div class="copy-group">
-            <span> ⁰¹🥇Assistente ꗃ</span>
+            <span> ⁰ Em Branco ꗃ</span>
             <button class="copy-button" onclick="copyText('ᵃˢˢ')">Copiar</button>
         </div>
         <div class="copy-group">
