--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <button class="copy-button" onclick="copyText('ᵃˢˢ')">Copiar</button>
         </div>
         <div class="copy-group">
-            <span> Vice dirigente</span>
+            <span>  Em Branco </span>
             <button class="copy-button" onclick="copyText('2024')">Copiar</button>
         </div>
     </div>
