--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
             <h2> Capitólio <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
         </div>
         <div class="copy-group">
-            <span>⁰⁰ ✶ Em branco ꗃ </span>
-            <button class="copy-button" onclick="copyText('ⁱᵐ')">Copiar</button>
+            <span>Em branco ◌ </span>
+            <button class="copy-button" onclick="copyText('invalido')">Copiar</button>
         </div>
         <div class="copy-group">
-            <span> ⁰ Em Branco ꗃ</span>
-            <button class="copy-button" onclick="copyText('ᵃˢˢ')">Copiar</button>
+            <span>Em Branco ◌ </span>
+            <button class="copy-button" onclick="copyText('invalido')">Copiar</button>
         </div>
         <div class="copy-group">
-            <span>  Em Branco </span>
-            <button class="copy-button" onclick="copyText('2024')">Copiar</button>
+            <span>  Em Branco ◌ </span>
+            <button class="copy-button" onclick="copyText('Invalido')">Copiar</button>
         </div>
     </div>
 
