--- a/index.html
+++ b/index.html
@@ -103,6 +103,30 @@
         </div>
     </div>
     
+        <!-- Seção Casa Branca -->
+    <div class="house-section">
+        <div class="house-title">
+            <i class="fas fa-home"></i>
+            <h2>Casa Branca <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
+        </div>
+        <div class="copy-group">
+            <span>⁰⁰ ✶ 𝗜𝗺𝗽𝗲𝗿𝗮𝗱𝗼𝗿 ꗃ </span>
+            <button class="copy-button" onclick="copyText('ⁱᵐ')">Copiar</button>
+        </div>
+        <div class="copy-group">
+            <span>⁰⁰ ✶ 𝗜𝗺𝗽𝗲𝗿𝗮𝗱𝗼𝗿 ꗃ </span>
+            <button class="copy-button" onclick="copyText('ⁱᵐ')">Copiar</button>
+        </div>
+        <div class="copy-group">
+            <span> ⁰¹🥇Assistente ꗃ</span>
+            <button class="copy-button" onclick="copyText('ᵃˢˢ')">Copiar</button>
+        </div>
+        <div class="copy-group">
+            <span> Vice Imperador</span>
+            <button class="copy-button" onclick="copyText('2024')">Copiar</button>
+        </div>
+    </div>
+    
     <!-- Seção Mossad -->
     <div class="house-section">
         <div class="house-title">
