--- a/index.html
+++ b/index.html
@@ -78,7 +78,16 @@
             <button class="copy-button" onclick="copyText('Invalido')">Copiar</button>
         </div>
     </div>
-
+    <div class="house-section">
+        <div class="house-title">
+            <i class="fa-solid fa-bars"></i> <!-- Ícone de castelo -->
+            <h2> Capitólio <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
+        </div>
+        <div class="copy-group">
+            <span>Em branco ◌ </span>
+            <button class="copy-button" onclick="copyText('invalido')">Copiar</button>
+        </div>
+                </div>
     <!-- Seção Casa Branca -->
     <div class="house-section">
         <div class="house-title">
