--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
             <h2> Capitólio <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
         </div>
         <div class="copy-group">
-            <span>Em branco ◌ </span>
-            <button class="copy-button" onclick="copyText('invalido')">Copiar</button>
+            <span>├🎖️Diretor ◌ </span>
+            <button class="copy-button" onclick="copyText('ᵈʳᵗᵒ')">Copiar</button>
         </div>
         <div class="copy-group">
-            <span>Em Branco ◌ </span>
-            <button class="copy-button" onclick="copyText('invalido')">Copiar</button>
+            <span>├🏅Vice Diretor  ◌ </span>
+            <button class="copy-button" onclick="copyText('ᵠʳˢˢ')">Copiar</button>
         </div>
         <div class="copy-group">
-            <span>  Em Branco ◌ </span>
-            <button class="copy-button" onclick="copyText('Invalido')">Copiar</button>
+            <span>  ├★Primeiro Ministro ◌ </span>
+            <button class="copy-button" onclick="copyText('ˣᵠⁿ')">Copiar</button>
         </div>
     </div>
     <div class="house-section">
