--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
             <h2> Capitólio <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
         </div>
         <div class="copy-group">
-            <span>├🎖️Diretor ◌ </span>
+            <span>⁰¹├🎖️Diretor ◌ </span>
             <button class="copy-button" onclick="copyText('ᵈʳᵗᵒ')">Copiar</button>
         </div>
         <div class="copy-group">
-            <span>├🏅Vice Diretor  ◌ </span>
+            <span>⁰²├🏅Vice Diretor  ◌ </span>
             <button class="copy-button" onclick="copyText('ᵠʳˢˢ')">Copiar</button>
         </div>
         <div class="copy-group">
-            <span>  ├★Primeiro Ministro ◌ </span>
+            <span>⁰³├★Primeiro Ministro ◌ </span>
             <button class="copy-button" onclick="copyText('ˣᵠⁿ')">Copiar</button>
         </div>
     </div>
