--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
             <span>⁰³├★Primeiro Ministro ◌ </span>
             <button class="copy-button" onclick="copyText('ˣᵠⁿ')">Copiar</button>
         </div>
+        <div class="copy-group">
+            <span>⁰³├★Primeiro Ministro ◌ </span>
+            <button class="copy-button" onclick="copyText('ˣᵠⁿ')">Copiar</button>
+        </div>
     </div>
     <div class="house-section">
         <div class="house-title">
