--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
             <button class="copy-button" onclick="copyText('ˣᵠⁿ')">Copiar</button>
         </div>
         <div class="copy-group">
-            <span>⁰³├★Primeiro Ministro ◌ </span>
-            <button class="copy-button" onclick="copyText('ˣᵠⁿ')">Copiar</button>
+            <span>⁰⁴├✫Chanceler skur </span>
+            <button class="copy-button" onclick="copyText('ᶜʰⁿᶜˡʳ')">Copiar</button>
         </div>
     </div>
     <div class="house-section">
