--- a/index.html
+++ b/index.html
@@ -82,16 +82,16 @@
             <h2>Casa Branca <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
         </div>
         <div class="copy-group">
-            <span>⁰⁰ ✶ 𝗜𝗺𝗽𝗲𝗿𝗮𝗱𝗼𝗿 ꗃ </span>
-            <button class="copy-button" onclick="copyText('ⁱᵐ')">Copiar</button>
+            <span>⁰¹├★Primeiro Ministro ꗃ </span>
+            <button class="copy-button" onclick="copyText('ˣᵠⁿ')">Copiar</button>
         </div>
         <div class="copy-group">
-            <span>⁰⁰ ✶ 𝗜𝗺𝗽𝗲𝗿𝗮𝗱𝗼𝗿 ꗃ </span>
-            <button class="copy-button" onclick="copyText('ⁱᵐ')">Copiar</button>
+            <span>⁰⁰²├✫Chanceler skur ꗃ </span>
+            <button class="copy-button" onclick="copyText('ᶜʰⁿᶜˡʳ')">Copiar</button>
         </div>
         <div class="copy-group">
-            <span> ⁰¹🥇Assistente ꗃ</span>
-            <button class="copy-button" onclick="copyText('ᵃˢˢ')">Copiar</button>
+            <span> ⁰³├✫𝘗𝘳𝘰𝘤𝘶𝘳𝘢𝘥𝘰𝘳 Geral  ꗃ</span>
+            <button class="copy-button" onclick="copyText('ᵖʳᵍˡ')">Copiar</button>
         </div>
         <div class="copy-group">
             <span> Vice Imperador</span>
