--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <button class="copy-button" onclick="copyText('ˣᵠⁿ')">Copiar</button>
         </div>
         <div class="copy-group">
-            <span>⁰⁰²├✫Chanceler skur ꗃ </span>
+            <span>⁰²├✫Chanceler skur ꗃ </span>
             <button class="copy-button" onclick="copyText('ᶜʰⁿᶜˡʳ')">Copiar</button>
         </div>
         <div class="copy-group">
