--- a/index.html
+++ b/index.html
@@ -94,8 +94,12 @@
             <button class="copy-button" onclick="copyText('ᵖʳᵍˡ')">Copiar</button>
         </div>
         <div class="copy-group">
-            <span> Vice Imperador</span>
-            <button class="copy-button" onclick="copyText('2024')">Copiar</button>
+            <span> ⁰⁵├✫𝘊𝘰𝘯𝘴𝘦𝘭𝘩𝘦𝘪𝘳𝘰  ꗃ</span>
+            <button class="copy-button" onclick="copyText('ᶜˢʳ')">Copiar</button>
+        </div>
+                <div class="copy-group">
+            <span> ⁰⁶├✫Diretor da Abin ꗃ</span>
+            <button class="copy-button" onclick="copyText('ᶜˢʳ')">Copiar</button>
         </div>
     </div>
     
