--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="house-section">
         <div class="house-title">
             <i class="fas fa-home"></i>
-            <h2>Casa Branca <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
+            <h2> Kremnlin <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
         </div>
         <div class="copy-group">
             <span>⁰¹├★Primeiro Ministro ꗃ </span>
