--- a/index.html
+++ b/index.html
@@ -77,32 +77,72 @@
 
     <!-- Seção Casa Branca -->
     <div class="house-section">
-        <div class="house-title">
-            <i class="fas fa-home"></i>
-            <h2> Kremnlin <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
-        </div>
-        <div class="copy-group">
-            <span>⁰¹├★Primeiro Ministro ꗃ </span>
-            <button class="copy-button" onclick="copyText('ˣᵠⁿ')">Copiar</button>
-        </div>
-        <div class="copy-group">
-            <span>⁰²├✫Chanceler skur ꗃ </span>
-            <button class="copy-button" onclick="copyText('ᶜʰⁿᶜˡʳ')">Copiar</button>
-        </div>
-        <div class="copy-group">
-            <span> ⁰³├✫𝘗𝘳𝘰𝘤𝘶𝘳𝘢𝘥𝘰𝘳 Geral  ꗃ</span>
-            <button class="copy-button" onclick="copyText('ᵖʳᵍˡ')">Copiar</button>
-        </div>
-        <div class="copy-group">
-            <span> ⁰⁵├✫𝘊𝘰𝘯𝘴𝘦𝘭𝘩𝘦𝘪𝘳𝘰  ꗃ</span>
-            <button class="copy-button" onclick="copyText('ᶜˢʳ')">Copiar</button>
-        </div>
-                <div class="copy-group">
-            <span> ⁰⁶├✫Diretor da Abin ꗃ</span>
-            <button class="copy-button" onclick="copyText('ᶜˢʳ')">Copiar</button>
-        </div>
+    <div class="house-title">
+        <i class="fas fa-home"></i>
+        <h2> Kremnlin <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
     </div>
     
+    <div class="copy-group">
+        <span>⁰¹├★Primeiro Ministro ꗃ </span>
+        <button class="copy-button" onclick="copyText('ˣᵠⁿ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>⁰²├✫Chanceler skur ꗃ </span>
+        <button class="copy-button" onclick="copyText('ᶜʰⁿᶜˡʳ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>⁰³├✫𝘗𝘳𝘰𝘤𝘶𝘳𝘢𝘥𝘰𝘳 Geral ꗃ </span>
+        <button class="copy-button" onclick="copyText('ᵖʳᵍˡ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>⁰⁴├✫𝘊𝘰𝘯𝘴𝘦𝘭𝘩𝘦𝘪𝘳𝘰 ꗃ </span>
+        <button class="copy-button" onclick="copyText('ᶜˢʳ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>⁰⁵├✫Diretor da Abin ꗃ </span>
+        <button class="copy-button" onclick="copyText('ᵈʳᵃᵇⁿ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>⁰⁶├✫Arquiteto ꗃ </span>
+        <button class="copy-button" onclick="copyText('ᵃʳᵠᵗᵒ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>⁰⁷├✫Ministro Da Economia ꗃ </span>
+        <button class="copy-button" onclick="copyText('ᵐⁿˢᵉᶜ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>⁰⁸├✫Tesoureiro ꗃ </span>
+        <button class="copy-button" onclick="copyText('ᵗᵉˢʳᵏ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>⁰⁹├🎖️Juiz Inspetor ꗃ </span>
+        <button class="copy-button" onclick="copyText('ˣⁿˣ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>¹⁰├✫Delegado ꗃ </span>
+        <button class="copy-button" onclick="copyText('ᵈˡᵍ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>¹¹├✫𝘔𝘪𝘯𝘪𝘴𝘵𝘳𝘰 𝘥𝘢 𝘋𝘦𝘧𝘦𝘴𝘢 ꗃ </span>
+        <button class="copy-button" onclick="copyText('ᵐⁿˢᵈᵉᶠ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>¹²├✫Ministro da Justiça ꗃ </span>
+        <button class="copy-button" onclick="copyText('ᵐⁿˢʲ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>¹³├✫Ministro das relações ꗃ </span>
+        <button class="copy-button" onclick="copyText('ᵐⁿʳˡᶜ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>¹⁴├✫Ministro de inteligência ꗃ </span>
+        <button class="copy-button" onclick="copyText('ᵐⁱⁿⁱⁿᵗ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>¹⁵├✫Ministro do Interior ꗃ </span>
+        <button class="copy-button" onclick="copyText('ᵐⁿᵐᵍ')">Copiar</button>
+    </div>
+</div>
         <!-- Seção Casa Branca -->
     <div class="house-section">
         <div class="house-title">
