--- a/index.html
+++ b/index.html
@@ -61,19 +61,22 @@
 
     <!-- Seções de Casa -->
     <div class="house-section">
-        <div class="house-title">
-            <i class="fa-solid fa-bars"></i> <!-- Ícone de castelo -->
-            <h2> Bundestag <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
-        </div>
-        <div class="copy-group">
-            <span>⁰¹├🎖️Diretor ◌ </span>
-            <button class="copy-button" onclick="copyText('ᵈʳᵗᵒ')">Copiar</button>
-        </div>
-        <div class="copy-group">
-            <span>⁰²├🏅Vice Diretor  ◌ </span>
-            <button class="copy-button" onclick="copyText('ᵠʳˢˢ')">Copiar</button>
-        </div>
-                </div>
+    <div class="house-title">
+        <i class="fa-solid fa-bars"></i> <!-- Ícone de castelo -->
+        <h2> Bundestag <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
+    </div>
+    <div class="copy-group">
+        <span>⁰¹├🎖️Diretor ◌ </span>
+        <button class="copy-button" onclick="copyText('ᵈʳᵗᵒ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>⁰²├🏅Vice Diretor  ◌ </span>
+        <button class="copy-button" onclick="copyText('ᵠʳˢˢ')">Copiar</button>
+    </div>
+</div>
+<div class="footer">
+    <p>© neext Ltda</p>
+</div>
 
     <!-- Seção Casa Branca -->
     <div class="house-section">
