--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
 
     <!-- Seções de Casa -->
-    <div class="house-section">
+<div class="house-section">
     <div class="house-title">
         <i class="fa-solid fa-bars"></i> <!-- Ícone de castelo -->
         <h2> Bundestag <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
@@ -73,9 +73,10 @@
         <span>⁰²├🏅Vice Diretor  ◌ </span>
         <button class="copy-button" onclick="copyText('ᵠʳˢˢ')">Copiar</button>
     </div>
-</div>
-<div class="footer">
-    <p>© neext Ltda</p>
+    <!-- Texto centralizado no final -->
+    <div class="footer">
+        <p style="text-align: center; margin-top: 20px;">© neext Ltda</p>
+    </div>
 </div>
 
     <!-- Seção Casa Branca -->
