--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
     <!-- Texto centralizado no final -->
     <div class="footer">
-        <p style="text-align: center; margin-top: 20px;">© neext Ltda</p>
+        <p style="text-align: center; margin-top: 20px;">! Parlamento</p>
     </div>
 </div>
 
