--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     </div>
 
 <footer>
-   © Neext.Ltda <i class="fas fa-flag" style="color: purple;"></i>
+   © NEEXT LTDA. <i class="fas fa-flag" style="color: purple;"></i>
 </footer>
 
 <script src="script.js"></script>
