--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
         </div>
     </div>
 
-    <!-- Seções de Casa -->
-<div class="house-section">
+    <!-- Seções de Casa --><div class="house-section">
     <div class="house-title">
         <i class="fa-solid fa-bars"></i> <!-- Ícone de castelo -->
         <h2> Bundestag <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
@@ -68,16 +67,22 @@
     <div class="copy-group">
         <span>⁰¹├🎖️Diretor ◌ </span>
         <button class="copy-button" onclick="copyText('ᵈʳᵗᵒ')">Copiar</button>
+        <span style="color: blue; margin-left: 10px;">
+            <i class="fas fa-male"></i> Sam
+        </span>
     </div>
     <div class="copy-group">
-        <span>⁰²├🏅Vice Diretor  ◌ </span>
+        <span>⁰²├🏅Vice Diretor ◌ </span>
         <button class="copy-button" onclick="copyText('ᵠʳˢˢ')">Copiar</button>
+        <span style="color: pink; margin-left: 10px;">
+            <i class="fas fa-female"></i> Tay
+        </span>
     </div>
-    <!-- Texto centralizado no final -->
     <div class="footer">
-        <p style="text-align: center; margin-top: 20px;">! Parlamento</p>
+        <p style="text-align: center; margin-top: 20px;">© neext Ltda</p>
     </div>
 </div>
+
 
     <!-- Seção Casa Branca -->
     <div class="house-section">
