--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
         </div>
     </div>
 
-    <!-- Seções de Casa --><div class="house-section">
+    <!-- Seções de Casa -->
+    
     <div class="house-title">
         <i class="fa-solid fa-bars"></i> <!-- Ícone de castelo -->
         <h2> Bundestag <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
@@ -67,7 +68,7 @@
     <div class="copy-group">
         <span>⁰¹├🎖️Diretor ◌ </span>
         <button class="copy-button" onclick="copyText('ᵈʳᵗᵒ')">Copiar</button>
-        <span style="color: blue; margin-left: 10px;">
+        <span style="color: yellow; margin-left: 10px;">
             <i class="fas fa-male"></i> Sam
         </span>
     </div>
