--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
 
     <!-- Seções de Casa -->
-    
+    <<div class="house-section">
     <div class="house-title">
         <i class="fa-solid fa-bars"></i> <!-- Ícone de castelo -->
         <h2> Bundestag <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
