--- a/index.html
+++ b/index.html
@@ -50,13 +50,17 @@
             <p>@neextstickers</p>
         </div>
     </div>  
+    <div class="tweets">
+        <div class="tweet">
+            <p><i class="fa-microchip"></i> Atualização.</p>
+        </div>
         <div class="tweet">
             <p><i class="fas fa-tools"></i> Atualização.</p>
         </div>
     </div>
 
     <!-- Seções de Casa -->
-    <<div class="house-section">
+    <div class="house-section">
     <div class="house-title">
         <i class="fa-solid fa-bars"></i> <!-- Ícone de castelo -->
         <h2> Bundestag <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
