--- a/index.html
+++ b/index.html
@@ -69,14 +69,16 @@
         <span>⁰¹├🎖️Diretor ◌ </span>
         <button class="copy-button" onclick="copyText('ᵈʳᵗᵒ')">Copiar</button>
         <span style="color: yellow; margin-left: 10px;">
-            <i class="fas fa-male"></i> Sam
+            <i class="fas fa-male"></i> Sam 
+            <i class="fas fa-medal" style="color: gold; margin-left: 5px;"></i>
         </span>
     </div>
     <div class="copy-group">
         <span>⁰²├🏅Vice Diretor ◌ </span>
         <button class="copy-button" onclick="copyText('ᵠʳˢˢ')">Copiar</button>
         <span style="color: pink; margin-left: 10px;">
-            <i class="fas fa-female"></i> Tay
+            <i class="fas fa-female"></i> Tay 
+            <i class="fas fa-medal" style="color: gold; margin-left: 5px;"></i>
         </span>
     </div>
     <div class="footer">
