--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <p><i class="fa-microchip"></i> Atualização.</p>
         </div>
         <div class="tweet">
-            <p><i class="fas fa-tools"></i> Atualização.</p>
+            <p><i class="fas fa-tools"></i> ⁰¹ ⁰² ⁰³ ⁰⁴ ⁰⁵ ⁰⁶ ⁰⁷ ⁰⁸ ⁰⁹ ¹⁰.</p>
         </div>
     </div>
 
