--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
             <p>@neextstickers</p>
         </div>
     </div>  
-
+<div class="tweet">
+            <p><i class="fas fa-tools"></i> ⁰¹ ⁰² ⁰³ ⁰⁴ ⁰⁵ ⁰⁶ ⁰⁷ ⁰⁸ ⁰⁹ ¹⁰.</p>
+        </div>
+    </div>
     
     
 
