--- a/index.html
+++ b/index.html
@@ -45,15 +45,19 @@
 <div class="profile-circle">
     <img src="perfil.jpg" alt="Perfil" class="profile-image" />
 </div>
-        <div>
-            <h2> Apostila <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
+        <div>            <h2> Apostila <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
             <p>@neextstickers</p>
         </div>
     </div>  
-<div class="tweet">
-            <p><i class="fas fa-tools"></i> ⁰¹ ⁰² ⁰³ ⁰⁴ ⁰⁵ ⁰⁶ ⁰⁷ ⁰⁸ ⁰⁹ ¹⁰.</p>
+    <div class="tweets">
+        <div class="tweet">
+            <p><i class="fa-microchip"></i> Atualiza莽茫o.</p>
+        </div>
+        <div class="tweet">
+            <p><i class="fas fa-tools"></i> Atualiza莽茫o.</p>
         </div>
     </div>
+
     
     
 
