--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="house-section">
     <div class="house-title">
         <i class="fas fa-home"></i>
-        <h2> Kremnlin <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
+        <h2> Kremnlin# <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
     </div>
 
 
