--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
     </div>  
     <div class="tweets">
         <div class="tweet">
-            <p><i class="fa-microchip"></i> Atualiza莽茫o.</p>
+            <p><i class="fas fa-tools"></i> Atualiza莽茫o.</p>
         </div>
         <div class="tweet">
-            <p><i class="fas fa-tools"></i> Atualiza莽茫o.</p>
+            <p><i class="fas fa-tools"></i> Atualizao.</p>
         </div>
     </div>
 
