--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>  
     <div class="tweets">
         <div class="tweet">
-            <p><i class="fas fa-tools"></i> Atualiza莽茫o.</p>
+            <p><i class="fas fa-anchor"></i> Atualiza莽茫o.</p>
         </div>
         <div class="tweet">
             <p><i class="fas fa-tools"></i> Atualizao.</p>
