--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <p><i class="fas fa-thumbtack"></i> Estamos realizando melhorias em nosso site para oferecer uma experiência ainda melhor a você. Durante este período, algumas funcionalidades podem estar indisponíveis.</p>
         </div>
         <div class="tweet">
-            <p><i class="fas fa-tools"></i> versão "29.01.589.</p>
+            <p><i class="fas fa-tools"></i> versão 29.01.589.</p>
         </div>
     </div>
 
