--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="house-section">
     <div class="house-title">
         <i class="fas fa-home"></i>
-        <h2> Kremnlin# <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
+        <h2> Kremnlin <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
     </div>
 
 
@@ -102,7 +102,7 @@
         <button class="copy-button" onclick="copyText('ˣᵠⁿ')">Copiar</button>
     </div>
         <div class="copy-group">
-        <span>⁰²?Assistente ꗃ </span>
+        <span> ⁰²├★Assistente ꗃ </span>
         <button class="copy-button" onclick="copyText('ˣᵠⁿ')">Copiar</button>
     </div>
     <div class="copy-group">
