--- a/index.html
+++ b/index.html
@@ -95,12 +95,13 @@
         <i class="fas fa-home"></i>
         <h2> Kremnlin <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
     </div>
+<div class="copy-group">
+    <span>⁰¹├★Primeiro Ministro ꗃ </span>
+    <img src="URL_DA_IMAGEM" alt="Bonequinho Rany" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 5px;">
+    <span style="color: pink; margin-right: 5px;">Rany</span>
+    <button class="copy-button" onclick="copyText('ˣᵠⁿ')">Copiar</button>
+</div>
 
-
-    <div class="copy-group">
-        <span>⁰¹├★Primeiro Ministro ꗃ </span>
-        <button class="copy-button" onclick="copyText('ˣᵠⁿ')">Copiar</button>
-    </div>
         <div class="copy-group">
         <span> ⁰²├★Assistente ꗃ </span>
         <button class="copy-button" onclick="copyText('ˣᵠⁿ')">Copiar</button>
