--- a/index.html
+++ b/index.html
@@ -94,13 +94,15 @@
     <div class="house-title">
         <i class="fas fa-home"></i>
         <h2> Kremnlin <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
-    </div>
-<div class="copy-group">
+    </div><div class="copy-group">
     <span>⁰¹├★Primeiro Ministro ꗃ </span>
-    <img src="URL_DA_IMAGEM" alt="Bonequinho Rany" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 5px;">
+    <span style="font-size: 20px; margin-right: 5px;">
+        <i class="fas fa-female"></i> <!-- Ícone de mulher -->
+    </span>
     <span style="color: pink; margin-right: 5px;">Rany</span>
     <button class="copy-button" onclick="copyText('ˣᵠⁿ')">Copiar</button>
 </div>
+
 
         <div class="copy-group">
         <span> ⁰²├★Assistente ꗃ </span>
