--- a/index.html
+++ b/index.html
@@ -94,15 +94,14 @@
     <div class="house-title">
         <i class="fas fa-home"></i>
         <h2> Kremnlin <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
-    </div><div class="copy-group">
+    </div>
+<div class="copy-group">
     <span>⁰¹├★Primeiro Ministro ꗃ </span>
-    <span style="font-size: 20px; margin-right: 5px;">
-        <i class="fas fa-female"></i> <!-- Ícone de mulher -->
-    </span>
-    <span style="color: pink; margin-right: 5px;">Rany</span>
     <button class="copy-button" onclick="copyText('ˣᵠⁿ')">Copiar</button>
+    <span style="color: pink; margin-left: 10px;">
+        <i class="fas fa-female"></i> Rany <!-- Ícone de mulher -->
+    </span>
 </div>
-
 
         <div class="copy-group">
         <span> ⁰²├★Assistente ꗃ </span>
