--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
     </div>
     <div class="copy-group">
         <span>⁰¹├🎖️Diretor ◌ </span>
-        <button class="copy-button" onclick="copyText('ᵈʳᵗᵒ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ᵈʳᵗˢᵏ')">Copiar</button>
         <span style="color: yellow; margin-left: 10px;">
             <i class="fas fa-male"></i> Sam 
             <i class="fas fa-medal" style="color: gold; margin-left: 5px;"></i>
         </span>
     </div>
     <div class="copy-group">
-        <span>⁰²├🏅Vice Diretor ◌ </span>
-        <button class="copy-button" onclick="copyText('ᵠʳˢˢ')">Copiar</button>
+        <span>⁰²├🏅Vice Diretora ◌ </span>
+        <button class="copy-button" onclick="copyText('ᵘʳˢ')">Copiar</button>
         <span style="color: pink; margin-left: 10px;">
             <i class="fas fa-female"></i> Tay 
             <i class="fas fa-medal" style="color: gold; margin-left: 5px;"></i>
@@ -95,75 +95,88 @@
         <i class="fas fa-home"></i>
         <h2> Kremnlin <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
     </div>
-<div class="copy-group">
-    <span>⁰¹├★Primeiro Ministro ꗃ </span>
-    <button class="copy-button" onclick="copyText('ˣᵠⁿ')">Copiar</button>
-    <span style="color: pink; margin-left: 10px;">
-        <i class="fas fa-female"></i> Rany <!-- Ícone de mulher -->
-    </span>
-</div>
-
-        <div class="copy-group">
-        <span> ⁰²├★Assistente ꗃ </span>
-        <button class="copy-button" onclick="copyText('ˣᵠⁿ')">Copiar</button>
+    <div class="copy-group">
+        <span>⁰¹├▩ Primeiro Ministro ꗃ </span>
+        <button class="copy-button" onclick="copyText('ᵖʳᵉᵐⁱᵘʳˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>⁰²├✫Chanceler skur ꗃ </span>
-        <button class="copy-button" onclick="copyText('ᶜʰⁿᶜˡʳ')">Copiar</button>
+        <span>⁰²├▩ Chanceler skur ꗃ </span>
+        <button class="copy-button" onclick="copyText('ᶜʰˢᵏ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>⁰³├✫𝘗𝘳𝘰𝘤𝘶𝘳𝘢𝘥𝘰𝘳 Geral ꗃ </span>
-        <button class="copy-button" onclick="copyText('ᵖʳᵍˡ')">Copiar</button>
+        <span>⁰³├▩ 𝘗𝘳𝘰𝘤𝘶𝘳𝘢𝘥𝘰𝘳 Geral ꗃ </span>
+        <button class="copy-button" onclick="copyText('ᵖᵍˢᵏ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>⁰⁴├✫𝘊𝘰𝘯𝘴𝘦𝘭𝘩𝘦𝘪𝘳𝘰 ꗃ </span>
-        <button class="copy-button" onclick="copyText('ᶜˢʳ')">Copiar</button>
+        <span>⁰⁴├▩ 𝘊𝘰𝘯𝘴𝘦𝘭𝘩𝘦𝘪𝘳𝘰 ꗃ </span>
+        <button class="copy-button" onclick="copyText('ᶜˢᵏˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>⁰⁵├✫Diretor da Abin ꗃ </span>
-        <button class="copy-button" onclick="copyText('ᵈʳᵃᵇⁿ')">Copiar</button>
+        <span>⁰⁵├▩ Diretor da Abin ꗃ </span>
+        <button class="copy-button" onclick="copyText('ᵈʳᵃᵇⁱⁿ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>⁰⁶├✫Arquiteto ꗃ </span>
-        <button class="copy-button" onclick="copyText('ᵃʳᵠᵗᵒ')">Copiar</button>
+        <span>⁰⁶├▩ Ceo Regente ꗃ </span>
+        <button class="copy-button" onclick="copyText('ᶜᵗᶠ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>⁰⁷├✫Ministro Da Economia ꗃ </span>
+        <span>⁰⁷├▩ Arquiteto ꗃ </span>
+        <button class="copy-button" onclick="copyText('ᵃʳᵘʳˢ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>⁰⁸├▩ Ministro Da Economia ꗃ </span>
         <button class="copy-button" onclick="copyText('ᵐⁿˢᵉᶜ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>⁰⁸├✫Tesoureiro ꗃ </span>
+        <span>⁰⁹├▩ Tesoureiro ꗃ </span>
         <button class="copy-button" onclick="copyText('ᵗᵉˢʳᵏ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>⁰⁹├🎖️Juiz Inspetor ꗃ </span>
+        <span>¹⁰├▩ Juiz Inspetor ꗃ </span>
         <button class="copy-button" onclick="copyText('ˣⁿˣ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>¹⁰├✫Delegado ꗃ </span>
+        <span>¹¹├▩ Delegado ꗃ </span>
         <button class="copy-button" onclick="copyText('ᵈˡᵍ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>¹¹├✫𝘔𝘪𝘯𝘪𝘴𝘵𝘳𝘰 𝘥𝘢 𝘋𝘦𝘧𝘦𝘴𝘢 ꗃ </span>
-        <button class="copy-button" onclick="copyText('ᵐⁿˢᵈᵉᶠ')">Copiar</button>
+        <span>¹²├▩ 𝘔𝘪𝘯𝘪𝘴𝘵𝘳𝘰 𝘥𝘢 𝘋𝘦𝘧𝘦𝘴𝘢 ꗃ </span>
+        <button class="copy-button" onclick="copyText('ᵐᵈᶠˢᵏ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>¹²├✫Ministro da Justiça ꗃ </span>
-        <button class="copy-button" onclick="copyText('ᵐⁿˢʲ')">Copiar</button>
+        <span>¹³├▩ Ministro da Justiça ꗃ </span>
+        <button class="copy-button" onclick="copyText('ᵐⁿˢᵗⁿ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>¹³├✫Ministro das relações ꗃ </span>
-        <button class="copy-button" onclick="copyText('ᵐⁿʳˡᶜ')">Copiar</button>
+        <span>¹⁴├▩ Ministro das relações ꗃ </span>
+        <button class="copy-button" onclick="copyText('ᵐⁿʳˡ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>¹⁴├✫Ministro de inteligência ꗃ </span>
-        <button class="copy-button" onclick="copyText('ᵐⁱⁿⁱⁿᵗ')">Copiar</button>
+        <span>¹⁵├▩ Ministro de inteligência ꗃ </span>
+        <button class="copy-button" onclick="copyText('ᵐⁿˢᶜᵖ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>¹⁵├✫Ministro do Interior ꗃ </span>
-        <button class="copy-button" onclick="copyText('ᵐⁿᵐᵍ')">Copiar</button>
+        <span>¹⁶├▩ Ministro do Interior ꗃ </span>
+        <button class="copy-button" onclick="copyText('ᵐⁱⁿᵗˢ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>¹⁷├▩ Perfilador Geral ꗃ </span>
+        <button class="copy-button" onclick="copyText('ᵖᶠᵍˡˢ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>¹⁸├▩ 𝘗𝘴𝘪𝘤𝘰𝘭𝘰𝘨𝘢 ꗃ </span>
+        <button class="copy-button" onclick="copyText('ᵖˢᵘʳˢ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>¹⁹├▩ 𝘗𝘴𝘪𝘤𝘰𝘭𝘰𝘨𝘢ᵗᵏ ꗃ </span>
+        <button class="copy-button" onclick="copyText('ᵖˢᵘʳˢᵏ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>²⁰├▩ Guardião ♖ ꗃ </span>
+        <button class="copy-button" onclick="copyText('ᵍᵘᵃʳᵈⁱᵃⁿᵘʳˢ')">Copiar</button>
     </div>
 </div>
+
         <!-- Seção Casa Branca -->
     <div class="house-section">
         <div class="house-title">
