--- a/index.html
+++ b/index.html
@@ -178,28 +178,73 @@
 </div>
 
         <!-- Seção Casa Branca -->
-    <div class="house-section">
-        <div class="house-title">
-            <i class="fas fa-home"></i>
-            <h2> Kremnlin <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
-        </div>
-        <div class="copy-group">
-            <span>⁰⁰ ✶ 𝗜𝗺𝗽𝗲𝗿𝗮𝗱𝗼𝗿 ꗃ </span>
-            <button class="copy-button" onclick="copyText('ⁱᵐ')">Copiar</button>
-        </div>
-        <div class="copy-group">
-            <span>⁰⁰ ✶ 𝗜𝗺𝗽𝗲𝗿𝗮𝗱𝗼𝗿 ꗃ </span>
-            <button class="copy-button" onclick="copyText('ⁱᵐ')">Copiar</button>
-        </div>
-        <div class="copy-group">
-            <span> ⁰¹🥇Assistente ꗃ</span>
-            <button class="copy-button" onclick="copyText('ᵃˢˢ')">Copiar</button>
-        </div>
-        <div class="copy-group">
-            <span> Vice Imperador</span>
-            <button class="copy-button" onclick="copyText('2024')">Copiar</button>
-        </div>
+<div class="house-section">
+    <div class="house-title">
+        <i class="fas fa-home"></i>
+        <h2> Kremnlin <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
     </div>
+
+    <div class="copy-group">
+        <span>├⌯Ceo Chefe Geral ⌬ ᶜᵉᵒᵘʳˢ</span>
+        <button class="copy-button" onclick="copyText('ᶜᵉᵒᵘʳˢ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>├⌯Ceo Residente ⌬ ᶜᵒᵒʳˢ</span>
+        <button class="copy-button" onclick="copyText('ᶜᵒᵒʳˢ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>├⌯Ceo sk ⌬ ᶜᵒᵘʳˢ</span>
+        <button class="copy-button" onclick="copyText('ᶜᵒᵘʳˢ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>├⌯Dirigente Residente ⌬ ᵈʳᵘˢᵏ</span>
+        <button class="copy-button" onclick="copyText('ᵈʳᵘˢᵏ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>├⌯Professor Geral ⌬ ᵖᵍᵏʳᵘˢ</span>
+        <button class="copy-button" onclick="copyText('ᵖᵍᵏʳᵘˢ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>├⌯Professor tk ⌬ ᵖᵍᵗᵏ</span>
+        <button class="copy-button" onclick="copyText('ᵖᵍᵗᵏ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>├⌯𝘚𝘶𝘱𝘦𝘳𝘷𝘪𝘴𝘰𝘳 𝗀𝖾𝗋𝖺𝗅 ⌬ ˢᵖᵛᶜᵗ</span>
+        <button class="copy-button" onclick="copyText('ˢᵖᵛᶜᵗ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>├⌯Divulgador ⌬ ᵈᵛˢᵏ</span>
+        <button class="copy-button" onclick="copyText('ᵈᵛˢᵏ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>├⌯𝘌𝘮𝘣𝘢𝘪𝘻𝘢𝘥𝘰𝘳 ⌬ ᵉᵐᵇᵈᵘʳˢ</span>
+        <button class="copy-button" onclick="copyText('ᵉᵐᵇᵈᵘʳˢ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>├⌯𝘌𝘮𝘣𝘢𝘪𝘻𝘢𝘥𝘰𝘳 tk ⌬ ᵉᵐᵇʳᵘˢ</span>
+        <button class="copy-button" onclick="copyText('ᵉᵐᵇʳᵘˢ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>├⌯𝘚𝘦𝘤𝘳𝘦𝘵𝘢𝘳𝘪𝘰 𝘨𝘦𝘳𝘢𝘭 ⌬ ˢᶜᵗᵘʳˢ</span>
+        <button class="copy-button" onclick="copyText('ˢᶜᵗᵘʳˢ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>├⌯𝘚𝘦𝘤𝘳𝘦𝘵𝘢𝘳𝘪𝘰 tk ⌬ ˢᶜᵗᵏ</span>
+        <button class="copy-button" onclick="copyText('ˢᶜᵗᵏ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>├⌯𝘔𝘪𝘯𝘪𝘴𝘵𝘳𝘰 𝘥𝘢 𝘧𝘢𝘻𝘦𝘯da ⌬ ᵐᵈᶠᶻᵈˢ</span>
+        <button class="copy-button" onclick="copyText('ᵐᵈᶠᶻᵈˢ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>├⌯Tesoureiro ⌬ ᵗˢᵘʳˢ</span>
+        <button class="copy-button" onclick="copyText('ᵗˢᵘʳˢ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>├⌯Senador ⌬ ˢⁿᵘʳˢ</span>
+        <button class="copy-button" onclick="copyText('ˢⁿᵘʳˢ')">Copiar</button>
+    </div>
+</div>
     
     <!-- Seção Mossad -->
     <div class="house-section">
