--- a/index.html
+++ b/index.html
@@ -177,74 +177,74 @@
     </div>
 </div>
 
-        <!-- Seção Casa Branca -->
-<div class="house-section">
+        <!-- Seção Casa Branca --><div class="house-section">
     <div class="house-title">
         <i class="fas fa-home"></i>
         <h2> Kremnlin <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
     </div>
 
     <div class="copy-group">
-        <span>├⌯Ceo Chefe Geral ⌬ ᶜᵉᵒᵘʳˢ</span>
+        <span>Ceo Chefe Geral</span>
         <button class="copy-button" onclick="copyText('ᶜᵉᵒᵘʳˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├⌯Ceo Residente ⌬ ᶜᵒᵒʳˢ</span>
+        <span>Ceo Residente</span>
         <button class="copy-button" onclick="copyText('ᶜᵒᵒʳˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├⌯Ceo sk ⌬ ᶜᵒᵘʳˢ</span>
+        <span>Ceo sk</span>
         <button class="copy-button" onclick="copyText('ᶜᵒᵘʳˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├⌯Dirigente Residente ⌬ ᵈʳᵘˢᵏ</span>
+        <span>Dirigente Residente</span>
         <button class="copy-button" onclick="copyText('ᵈʳᵘˢᵏ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├⌯Professor Geral ⌬ ᵖᵍᵏʳᵘˢ</span>
+        <span>Professor Geral</span>
         <button class="copy-button" onclick="copyText('ᵖᵍᵏʳᵘˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├⌯Professor tk ⌬ ᵖᵍᵗᵏ</span>
+        <span>Professor tk</span>
         <button class="copy-button" onclick="copyText('ᵖᵍᵗᵏ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├⌯𝘚𝘶𝘱𝘦𝘳𝘷𝘪𝘴𝘰𝘳 𝗀𝖾𝗋𝖺𝗅 ⌬ ˢᵖᵛᶜᵗ</span>
+        <span>𝘚𝘶𝘱𝘦𝘳𝘷𝘪𝘴𝘰𝘳 𝗀𝖾𝗋𝖺𝗅</span>
         <button class="copy-button" onclick="copyText('ˢᵖᵛᶜᵗ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├⌯Divulgador ⌬ ᵈᵛˢᵏ</span>
+        <span>Divulgador</span>
         <button class="copy-button" onclick="copyText('ᵈᵛˢᵏ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├⌯𝘌𝘮𝘣𝘢𝘪𝘻𝘢𝘥𝘰𝘳 ⌬ ᵉᵐᵇᵈᵘʳˢ</span>
+        <span>𝘌𝘮𝘣𝘢𝘪𝘻𝘢𝘥𝘰𝘳</span>
         <button class="copy-button" onclick="copyText('ᵉᵐᵇᵈᵘʳˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├⌯𝘌𝘮𝘣𝘢𝘪𝘻𝘢𝘥𝘰𝘳 tk ⌬ ᵉᵐᵇʳᵘˢ</span>
+        <span>𝘌𝘮𝘣𝘢𝘪𝘻𝘢𝘥𝘰𝘳 tk</span>
         <button class="copy-button" onclick="copyText('ᵉᵐᵇʳᵘˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├⌯𝘚𝘦𝘤𝘳𝘦𝘵𝘢𝘳𝘪𝘰 𝘨𝘦𝘳𝘢𝘭 ⌬ ˢᶜᵗᵘʳˢ</span>
+        <span>𝘚𝘦𝘤𝘳𝘦𝘵𝘢𝘳𝘪𝘰 𝘨𝘦𝘳𝘢𝘭</span>
         <button class="copy-button" onclick="copyText('ˢᶜᵗᵘʳˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├⌯𝘚𝘦𝘤𝘳𝘦𝘵𝘢𝘳𝘪𝘰 tk ⌬ ˢᶜᵗᵏ</span>
+        <span>𝘚𝘦𝘤𝘳𝘦𝘵𝘢𝘳𝘪𝘰 tk</span>
         <button class="copy-button" onclick="copyText('ˢᶜᵗᵏ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├⌯𝘔𝘪𝘯𝘪𝘴𝘵𝘳𝘰 𝘥𝘢 𝘧𝘢𝘻𝘦𝘯da ⌬ ᵐᵈᶠᶻᵈˢ</span>
+        <span>𝘔𝘪𝘯𝘪𝘴𝘵𝘳𝘰 𝘥𝘢 𝘧𝘢𝘻𝘦𝘯da</span>
         <button class="copy-button" onclick="copyText('ᵐᵈᶠᶻᵈˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├⌯Tesoureiro ⌬ ᵗˢᵘʳˢ</span>
+        <span>Tesoureiro</span>
         <button class="copy-button" onclick="copyText('ᵗˢᵘʳˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├⌯Senador ⌬ ˢⁿᵘʳˢ</span>
+        <span>Senador</span>
         <button class="copy-button" onclick="copyText('ˢⁿᵘʳˢ')">Copiar</button>
     </div>
 </div>
+
     
     <!-- Seção Mossad -->
     <div class="house-section">
