--- a/index.html
+++ b/index.html
@@ -248,23 +248,102 @@
     
     <!-- Seção Mossad -->
     <div class="house-section">
-        <div class="house-title">
-            <i class="fas fa-home"></i>
-            <h2>Mossad <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
-        </div>
-        <div class="copy-group">
-            <span> 01 Imperador</span>
-            <button class="copy-button" onclick="copyText('2024')">Copiar</button>
-        </div>
-        <div class="copy-group">
-            <span> Embaixador de Ir</span>
-            <button class="copy-button" onclick="copyText('2024')">Copiar</button>
-        </div>
-        <div class="copy-group">
-            <span> Vice Imperador</span>
-            <button class="copy-button" onclick="copyText('2024')">Copiar</button>
-        </div>
+    <div class="house-title">
+        <i class="fas fa-home"></i>
+        <h2> Capital Regional <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
     </div>
+    <div class="copy-group">
+        <span> ⁰¹├⑆ Deputado ⎔</span>
+        <button class="copy-button" onclick="copyText('ᵈᵖᵗˢᵏ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span> ⁰²├⑆ Governador  ⎔</span>
+        <button class="copy-button" onclick="copyText('ᵍᵛʳᵏ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span> ⁰³├⑆ Engenheiro ⎔</span>
+        <button class="copy-button" onclick="copyText('ᵉⁿᵍˢᵏ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span> ⁰⁴├⑆ 𝘌𝘯𝘨𝘦𝘯𝘩𝘦𝘪𝘳𝘰 𝘈𝘴𝘴𝘪𝘴𝘵𝘦𝘯𝘵𝘦 ⎔</span>
+        <button class="copy-button" onclick="copyText('ᵉⁿᵍᵗᵏᵘʳ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span> ⁰⁵├⑆ Operário ⎔</span>
+        <button class="copy-button" onclick="copyText('ᵒᵖʳᵘʳˢ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span> ⁰⁶├⑆ Ancião Guardião ⎔</span>
+        <button class="copy-button" onclick="copyText('ᵃᵍᵘʳˢ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span> ⁰⁷├⑆ Organizador ⎔</span>
+        <button class="copy-button" onclick="copyText('ᵒʳᵍᵘʳˢ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span> ⁰⁸├⑆ Ministro Do Link ⎔</span>
+        <button class="copy-button" onclick="copyText('ᵐⁿˡᵘʳˢ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span> ⁰⁹├⑆ Desembargador ⎔</span>
+        <button class="copy-button" onclick="copyText('ᵈˢᵘʳˢ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span> ¹⁰├⑆ 𝘊𝘰𝘯𝘵𝘢𝘥𝘰𝘳 ⎔</span>
+        <button class="copy-button" onclick="copyText('ᶜᵗᵗᵘʳˢ')">Copiar</button>
+    </div>
+</div>
+
+<div class="house-section">
+    <div class="house-title">
+        <i class="fas fa-home"></i>
+        <h2> Distrito federal <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
+    </div>
+    <div class="copy-group">
+        <span>├▢Ministro Do Estado ❍</span>
+        <button class="copy-button" onclick="copyText('ᵐⁿᵈᵘʳ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>├▢Vereador ❍</span>
+        <button class="copy-button" onclick="copyText('ᵛʳᵘʳˢ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>├▢Sindicato ❍</span>
+        <button class="copy-button" onclick="copyText('ˢᵈᵘʳˢ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>├▢Repositor ❍</span>
+        <button class="copy-button" onclick="copyText('ʳᵖᵘʳˢ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>├▢Upador ❍</span>
+        <button class="copy-button" onclick="copyText('ᵘᵖᵈʳˢ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>├▢𝖲𝖾𝗀𝗎𝗋𝖺𝗇𝖼̧𝖺 ❍</span>
+        <button class="copy-button" onclick="copyText('ˢᵍᵘʳˢ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>├▢Vigia ❍</span>
+        <button class="copy-button" onclick="copyText('ᵛᵍᵘʳˢ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>├▢𝘈𝘨𝘦𝘯𝘵𝘦 ❍</span>
+        <button class="copy-button" onclick="copyText('ᶜᵒᵈⁱⁿᵒᵐᵉ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>├▢𝘐𝘯𝘴𝘵𝘳𝘶𝘵𝘰𝘳 ❍</span>
+        <button class="copy-button" onclick="copyText('ⁱⁿˢᵗᵘʳ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>├▢Carrasco ❍</span>
+        <button class="copy-button" onclick="copyText('ᶜᵃᵘʳˢ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>├▢Animador ❍</span>
+        <button class="copy-button" onclick="copyText('ᵃⁿⁱᵐᵘʳˢ')">Copiar</button>
+    </div>
+</div>
     
     <!-- Seção Citadel -->
     <div class="house-section">
