--- a/index.html
+++ b/index.html
@@ -344,6 +344,116 @@
         <button class="copy-button" onclick="copyText('ᵃⁿⁱᵐᵘʳˢ')">Copiar</button>
     </div>
 </div>
+<div class="house-section">
+    <div class="house-title">
+        <i class="fas fa-home"></i>
+        <h2>MUNICÍPIO KRVOW <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
+    </div>
+    <div class="copy-group">
+        <span>⁰¹├◈ 𝘑𝘶𝘪𝘻 ▣</span>
+        <button class="copy-button" onclick="copyText('ʲᶻᵏʳᵛ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>⁰²├◈𝘗𝘳𝘦𝘧𝘦𝘪𝘵𝘰 ▣</span>
+        <button class="copy-button" onclick="copyText('ᵖᶠˢᵏ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>⁰³├◈ 𝘈𝘥𝘷𝘰𝘨𝘢𝘥𝘰 ▣</span>
+        <button class="copy-button" onclick="copyText('ᵃᵈᵛˢᵏ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>⁰⁴├◈𝘚𝘩𝘦𝘳𝘪𝘦𝘧𝘧 ▣</span>
+        <button class="copy-button" onclick="copyText('ˢʰᵉˢᵏ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>⁰⁵├◈𝘊𝘰𝘰𝘥𝘦𝘳𝘯𝘢𝘥𝘰𝘳 ▣</span>
+        <button class="copy-button" onclick="copyText('ᶜᵈˢᵏ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>⁰⁶├◈𝘜𝘱𝘢𝘥𝘰𝘳 ▣</span>
+        <button class="copy-button" onclick="copyText('ᵘᵖᵈʳ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>⁰⁸├◈𝘖𝘳𝘨𝘢𝘯𝘪𝘢𝘥𝘰𝘳 ▣</span>
+        <button class="copy-button" onclick="copyText('ᵒʳᵍ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>⁰⁹├◈ advogado ▣</span>
+        <button class="copy-button" onclick="copyText('ᵃᵈᵛᵈ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>¹⁰├◈ Empregador ▣</span>
+        <button class="copy-button" onclick="copyText('ᵉᵐᵖʳᵍ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>¹¹├◈ Avaliador ▣</span>
+        <button class="copy-button" onclick="copyText('ᵃᵛˡᵈ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>²⁰├◈ 𝘎𝘦𝘳𝘦𝘯𝘵𝘦 𝘈𝘯𝘢𝘭𝘪𝘴𝘵𝘢 ▣</span>
+        <button class="copy-button" onclick="copyText('ᵍʳᵃⁿ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>¹²├◈𝘈𝘯𝘢𝘭𝘪𝘴𝘵𝘢 ▣</span>
+        <button class="copy-button" onclick="copyText('ᵃⁿˡˢ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>²¹├◈ 𝘐𝘯𝘥𝘪𝘤𝘢𝘥𝘰𝘳 ▣</span>
+        <button class="copy-button" onclick="copyText('ⁱⁿ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>²²├◈ Adm Estadual ▣</span>
+        <button class="copy-button" onclick="copyText('ᵃᵈᵐᵉˢᵗ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>²³├◈ 𝘗𝘰𝘭𝘪𝘤𝘪𝘢𝘭 ▣</span>
+        <button class="copy-button" onclick="copyText('ᵖˡˢᵏ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>²⁴├◈ 𝘙𝘦𝘤𝘪𝘱𝘤𝘪𝘰𝘯𝘪𝘴𝘵𝘢 ▣</span>
+        <button class="copy-button" onclick="copyText('ʳᵉᶜⁱᵖ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>²⁵├◈ Adm Federal ▣</span>
+        <button class="copy-button" onclick="copyText('ˢᵏᵘʳⁿᵉᵉˣᵗ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>²⁶├◈𝘈𝘯𝘢𝘭𝘪𝘴𝘵𝘢 ▣</span>
+        <button class="copy-button" onclick="copyText('ᵃⁿˡˢᵗ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>²⁷├◈ 𝖲𝖾𝗀𝗎𝗋𝖺𝗇𝖼̧𝖺 ▣</span>
+        <button class="copy-button" onclick="copyText('ˢᵍ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>²⁸├◈ 𝘈𝘥𝘮 𝘕𝘦𝘦𝘹𝘵 𝘖𝘧𝘪𝘤𝘪𝘢𝘭 ▣</span>
+        <button class="copy-button" onclick="copyText('ˢᵏᵘʳ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>²⁹├◈ ADM Residente ▣</span>
+        <button class="copy-button" onclick="copyText('ᵃᵈᵐʳˢ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>³⁰├◈ 𝘈𝘥𝘮 𝘐𝘯𝘵𝘦𝘳𝘪𝘯𝘰 ▣</span>
+        <button class="copy-button" onclick="copyText('ᵃᵈᵐⁱⁿᵗ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>³¹├◈ 𝘈𝘥𝘮 𝘈𝘱𝘳𝘦𝘯𝘥𝘪𝘻 ▣</span>
+        <button class="copy-button" onclick="copyText('ᵃᵈᵐᵏᵃᵖʳᵉⁿ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>³²├◈ Iniciante ▣</span>
+        <button class="copy-button" onclick="copyText('ⁱⁿᶜⁱ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>³³├◈ 𝘈𝘭𝘶𝘯𝘰 ▣</span>
+<button class="copy-button" onclick="copyText('ᵃˡᵘⁿᵒˢᵏ')">Copiar</button>
+    </div>
+        <div class="copy-group">
+        <span>³⁴├◈ Teste ▣/span>
+<button class="copy-button" onclick="copyText('ˢᵏᵘʳ')">Copiar</button>
+    </div>
+    
     
     <!-- Seção Citadel -->
     <div class="house-section">
