--- a/index.html
+++ b/index.html
@@ -453,6 +453,7 @@
         <span>³⁴├◈ Teste ▣/span>
 <button class="copy-button" onclick="copyText('ˢᵏᵘʳ')">Copiar</button>
     </div>
+        </div>
     
     
     <!-- Seção Citadel -->
