--- a/index.html
+++ b/index.html
@@ -377,10 +377,7 @@
         <span>⁰⁸├◈𝘖𝘳𝘨𝘢𝘯𝘪𝘢𝘥𝘰𝘳 ▣</span>
         <button class="copy-button" onclick="copyText('ᵒʳᵍ')">Copiar</button>
     </div>
-    <div class="copy-group">
-        <span>⁰⁹├◈ advogado ▣</span>
-        <button class="copy-button" onclick="copyText('ᵃᵈᵛᵈ')">Copiar</button>
-    </div>
+
     <div class="copy-group">
         <span>¹⁰├◈ Empregador ▣</span>
         <button class="copy-button" onclick="copyText('ᵉᵐᵖʳᵍ')">Copiar</button>
@@ -450,7 +447,7 @@
 <button class="copy-button" onclick="copyText('ᵃˡᵘⁿᵒˢᵏ')">Copiar</button>
     </div>
         <div class="copy-group">
-        <span>³⁴├◈ Teste ▣/span>
+        <span>³⁴├◈ Teste ▣</span>
 <button class="copy-button" onclick="copyText('ˢᵏᵘʳ')">Copiar</button>
     </div>
         </div>
