--- a/index.html
+++ b/index.html
@@ -451,6 +451,50 @@
 <button class="copy-button" onclick="copyText('ˢᵏᵘʳ')">Copiar</button>
     </div>
         </div>
+        <div class="license-section">
+    <div class="license-title">
+        <h2>Licença</h2>
+        <hr>
+    </div>
+    <div class="copy-group">
+        <span>╭─────────────╮</span>
+    </div>
+    <div class="copy-group">
+        <span>├✙Atestado ⌔</span>
+        <button class="copy-button" onclick="copyText('ᵃᵗᵉˢᵗᵃˢᵒ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>├✙Licença indeterminada ⌔</span>
+        <button class="copy-button" onclick="copyText('ˡᶜᵐᵈˢᵏ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>├✙Visitante ⌔</span>
+        <button class="copy-button" onclick="copyText('ˢᵏᵘʳᵛⁱˢⁱᵗ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>├✙ 𝘍𝘦𝘳𝘪𝘢𝘴 ⌔</span>
+        <button class="copy-button" onclick="copyText('ᶠʳˢˢᵏ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>├✙ 𝘍𝘦𝘳𝘪𝘢𝘴 𝘷𝘦𝘳𝘮𝘦𝘭𝘩𝘢 ⌔</span>
+        <button class="copy-button" onclick="copyText('ᶠʳˢᵛʳᵐ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>├✙ 𝘓𝘪𝘤𝘦𝘯𝘤𝘢 𝘮𝘦dica ⌔</span>
+        <button class="copy-button" onclick="copyText('ⁱᶜˢᵐᵈ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>├✙𝘓𝘪𝘤𝘦𝘯𝘤𝘢 ⌔</span>
+        <button class="copy-button" onclick="copyText('ⁱᶜˢ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>├✙ Aposentado ⌔</span>
+        <button class="copy-button" onclick="copyText('ˢᵏᵘʳ²⁰¹⁹')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>╰═──────═⌘═──────═╯</span>
+    </div>
+</div>
     
     
     <!-- Seção Citadel -->
