--- a/index.html
+++ b/index.html
@@ -453,46 +453,40 @@
         </div>
         <div class="license-section">
     <div class="license-title">
-        <h2>Licença</h2>
-        <hr>
+        <i class="fas fa-file-alt"></i>
+        <h2>LICENÇA <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
     </div>
     <div class="copy-group">
-        <span>╭─────────────╮</span>
+        <span>⁰¹├◈ Atestado ⌔ ᵃᵗᵉˢᵗᵃˢᵒ</span>
+        <button class="copy-button" onclick="copyText('ʲᶻᵏʳᵛ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├✙Atestado ⌔</span>
-        <button class="copy-button" onclick="copyText('ᵃᵗᵉˢᵗᵃˢᵒ')">Copiar</button>
-    </div>
-    <div class="copy-group">
-        <span>├✙Licença indeterminada ⌔</span>
+        <span>⁰²├◈ Licença indeterminada ⌔ ˡᶜᵐᵈˢᵏ</span>
         <button class="copy-button" onclick="copyText('ˡᶜᵐᵈˢᵏ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├✙Visitante ⌔</span>
+        <span>⁰³├◈ Visitante ⌔ ˢᵏᵘʳᵛⁱˢⁱᵗ</span>
         <button class="copy-button" onclick="copyText('ˢᵏᵘʳᵛⁱˢⁱᵗ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├✙ 𝘍𝘦𝘳𝘪𝘢𝘴 ⌔</span>
+        <span>⁰⁴├◈ 𝘍𝘦𝘳𝘪𝘢𝘴 ⌔ ᶠʳˢˢᵏ</span>
         <button class="copy-button" onclick="copyText('ᶠʳˢˢᵏ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├✙ 𝘍𝘦𝘳𝘪𝘢𝘴 𝘷𝘦𝘳𝘮𝘦𝘭𝘩𝘢 ⌔</span>
+        <span>⁰⁵├◈ 𝘍𝘦𝘳𝘪𝘢𝘴 𝘷𝘦𝘳𝘮𝘦𝘭𝘩𝘢 ⌔ ᶠʳˢᵛʳᵐ</span>
         <button class="copy-button" onclick="copyText('ᶠʳˢᵛʳᵐ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├✙ 𝘓𝘪𝘤𝘦𝘯𝘤𝘢 𝘮𝘦dica ⌔</span>
+        <span>⁰⁶├◈ 𝘓𝘪𝘤𝘦𝘯𝘤𝘢 𝘮𝘦dica ⌔ ⁱᶜˢᵐᵈ</span>
         <button class="copy-button" onclick="copyText('ⁱᶜˢᵐᵈ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├✙𝘓𝘪𝘤𝘦𝘯𝘤𝘢 ⌔</span>
+        <span>⁰⁷├◈ 𝘓𝘪𝘤𝘦𝘯𝘤𝘢 ⌔ ⁱᶜˢ</span>
         <button class="copy-button" onclick="copyText('ⁱᶜˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├✙ Aposentado ⌔</span>
+        <span>⁰⁸├◈ Aposentado ⌔ ˢᵏᵘʳ²⁰¹⁹</span>
         <button class="copy-button" onclick="copyText('ˢᵏᵘʳ²⁰¹⁹')">Copiar</button>
-    </div>
-    <div class="copy-group">
-        <span>╰═──────═⌘═──────═╯</span>
     </div>
 </div>
     
