--- a/index.html
+++ b/index.html
@@ -451,41 +451,41 @@
 <button class="copy-button" onclick="copyText('ˢᵏᵘʳ')">Copiar</button>
     </div>
         </div>
-        <div class="license-section">
-    <div class="license-title">
-        <i class="fas fa-file-alt"></i>
-        <h2>LICENÇA <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
+        <div class="house-section">
+    <div class="house-title">
+        <i class="fas fa-home"></i>
+        <h2>MUNICÍPIO KRVOW <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
     </div>
     <div class="copy-group">
-        <span>⁰¹├◈ Atestado ⌔ ᵃᵗᵉˢᵗᵃˢᵒ</span>
-        <button class="copy-button" onclick="copyText('ʲᶻᵏʳᵛ')">Copiar</button>
+        <span>⁰¹├✙ Atestado ⌔ ᵃᵗᵉˢᵗᵃˢᵒ</span>
+        <button class="copy-button" onclick="copyText('ᵃᵗᵉˢᵗᵃˢᵒ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>⁰²├◈ Licença indeterminada ⌔ ˡᶜᵐᵈˢᵏ</span>
+        <span>⁰²├✙ Licença indeterminada ⌔ ˡᶜᵐᵈˢᵏ</span>
         <button class="copy-button" onclick="copyText('ˡᶜᵐᵈˢᵏ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>⁰³├◈ Visitante ⌔ ˢᵏᵘʳᵛⁱˢⁱᵗ</span>
+        <span>⁰³├✙ Visitante ⌔ ˢᵏᵘʳᵛⁱˢⁱᵗ</span>
         <button class="copy-button" onclick="copyText('ˢᵏᵘʳᵛⁱˢⁱᵗ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>⁰⁴├◈ 𝘍𝘦𝘳𝘪𝘢𝘴 ⌔ ᶠʳˢˢᵏ</span>
+        <span>⁰⁴├✙ 𝘍𝘦𝘳𝘪𝘢𝘴 ⌔ ᶠʳˢˢᵏ</span>
         <button class="copy-button" onclick="copyText('ᶠʳˢˢᵏ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>⁰⁵├◈ 𝘍𝘦𝘳𝘪𝘢𝘴 𝘷𝘦𝘳𝘮𝘦𝘭𝘩𝘢 ⌔ ᶠʳˢᵛʳᵐ</span>
+        <span>⁰⁵├✙ 𝘍𝘦𝘳𝘪𝘢𝘴 𝘷𝘦𝘳𝘮𝘦𝘭𝘩𝘢 ⌔ ᶠʳˢᵛʳᵐ</span>
         <button class="copy-button" onclick="copyText('ᶠʳˢᵛʳᵐ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>⁰⁶├◈ 𝘓𝘪𝘤𝘦𝘯𝘤𝘢 𝘮𝘦dica ⌔ ⁱᶜˢᵐᵈ</span>
+        <span>⁰⁶├✙ 𝘓𝘪𝘤𝘦𝘯𝘤𝘢 𝘮𝘦𝘥𝘪𝘤𝘢 ⌔ ⁱᶜˢᵐᵈ</span>
         <button class="copy-button" onclick="copyText('ⁱᶜˢᵐᵈ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>⁰⁷├◈ 𝘓𝘪𝘤𝘦𝘯𝘤𝘢 ⌔ ⁱᶜˢ</span>
+        <span>⁰⁷├✙ 𝘓𝘪𝘤𝘦𝘯𝘤𝘢 ⌔ ⁱᶜˢ</span>
         <button class="copy-button" onclick="copyText('ⁱᶜˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>⁰⁸├◈ Aposentado ⌔ ˢᵏᵘʳ²⁰¹⁹</span>
+        <span>⁰⁸├✙ Aposentado ⌔ ˢᵏᵘʳ²⁰¹⁹</span>
         <button class="copy-button" onclick="copyText('ˢᵏᵘʳ²⁰¹⁹')">Copiar</button>
     </div>
 </div>
