--- a/index.html
+++ b/index.html
@@ -454,14 +454,14 @@
         <div class="house-section">
     <div class="house-title">
         <i class="fas fa-home"></i>
-        <h2>MUNICÍPIO KRVOW <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
+        <h2>Licença <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
     </div>
     <div class="copy-group">
-        <span>⁰¹├✙ Atestado ⌔ ᵃᵗᵉˢᵗᵃˢᵒ</span>
+        <span>⁰¹├✙ Atestado ⌔ ᵃ</span>
         <button class="copy-button" onclick="copyText('ᵃᵗᵉˢᵗᵃˢᵒ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>⁰²├✙ Licença indeterminada ⌔ ˡᶜᵐᵈˢᵏ</span>
+        <span>⁰²├✙ Licença indeterminada ⌔</span>
         <button class="copy-button" onclick="copyText('ˡᶜᵐᵈˢᵏ')">Copiar</button>
     </div>
     <div class="copy-group">
